[gd_scene load_steps=4 format=3 uid="uid://2ovhn0ofodmg"]

[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_vqsq0"]
[ext_resource type="FontFile" uid="uid://bl7nsp4ch70kk" path="res://ui/fonts/m3x6.ttf" id="2_e4qvc"]
[ext_resource type="PackedScene" uid="uid://ue3cy6s01b80" path="res://ui/main_menu/tests_menu/tests_menu.tscn" id="3_4lkxf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 3.0
offset_right = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vqsq0")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 100.0
offset_right = 416.0
offset_bottom = 134.0
theme_override_fonts/font = ExtResource("2_e4qvc")
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="TestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 150.0
offset_right = 416.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("2_e4qvc")
theme_override_font_sizes/font_size = 32
text = "Tests"

[node name="TestsMenu" parent="." instance=ExtResource("3_4lkxf")]
visible = false
